# gsoc-demo

./: README.md
fsa/: Makefile  README.txt
fsa/src/: IntHashSet.c  IntHashSet.h  LinkedList.c  LinkedList.h  Set.h  bitvec.c  bitvec.h  dfa.c  dfa.h  dfas.c  dfas.h  main.c  nfa.c  nfa.h  nfas.c  nfas.h  strdup.c  strdup.h  translator.c  translator.h
mem_alloc/dbll/: Makefile  dbll.c  dbll_test  test.sh
mem_alloc/poolalloc/: README.txt  pa_test_2.c  poolalloc.c
parser/: Makefile  README.txt
parser/src/: grammar.c  grammar.h  main.c  parse_table.c  parse_table.h  parse_tree.c  parse_tree.h  rd_parser.c  rd_parser.h  stack.c  stack.h  strdup.c  td_parser.c  td_parser.h  tests.c
paxos/: Cargo.toml
paxos/src/: lib.rs  netutil.rs  orchestrate.rs
paxos/src/agents/: acceptor.rs  client.rs  proposer.rs
paxos/src/protocol/: acceptor.rs  mod.rs  proposer.rs
