[package]
name = "paxos_kv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paxos258kv"
path = "./src/orchestrate.rs"

[[bin]]
name = "kvclient"
path = "./src/agents/client.rs"

[[bin]]
name = "proposer"
path = "./src/agents/proposer.rs"

[[bin]]
name = "acceptor"
path = "./src/agents/acceptor.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

